# metagraphInterface

./: .gitignore  .gitmodules  COPYRIGHT  README.md
include/mabl3/: CMakeLists.txt  MetagraphInterface.cpp  MetagraphInterface.h
script/: createGraph.py
test/: CMakeLists.txt
test/lib/: mabl3
test/src/: loadExpectedTestdata.h  testMetagraphInterface.cpp
test/testdata/: generateTestdata.py  loadExpectedTestdata.h
